[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Sohag07Hasan <hyde.sohag@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"
requests = "^2.31.0"
pandas = "^2.0.2"
pyarrow = "^12.0.1"
tqdm = "^4.65.0"
plotly = "^5.15.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
